// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListRow /> renders List Row with colored date correctly 1`] = `
.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c11 .c11 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c13 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c17 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c15 {
  font-size: 14px;
  color: rgba(0,0,15,1);
}

.c10 {
  font-size: 14px;
  color: rgba(0,0,15,0.6);
}

.c8 {
  font-size: 14px;
  color: rgba(0,0,15,1);
  font-weight: 600;
}

.c5 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  min-width: 45px;
  max-width: 45px;
  height: 45px;
  width: 45px;
}

.c5:disabled {
  color: rgba(255,255,255 0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255 0.5);
  cursor: not-allowed;
}

.c5:focus {
  outline: none;
}

.c5 > * {
  pointer-events: none;
}

.c22 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  min-width: 35px;
  max-width: 35px;
  height: 35px;
  width: 35px;
}

.c22:disabled {
  color: rgba(255,255,255 0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255 0.5);
  cursor: not-allowed;
}

.c22:focus {
  outline: none;
}

.c22 > * {
  pointer-events: none;
}

.c1:not(:last-of-type) > div {
  border-bottom: 0.5px solid #E0E0E0;
}

.c2 {
  background-color: rgba(255,255,255,1);
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
}

.c4 {
  display: none;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: horizontal;
  -webkit-justify-content: horizontal;
  -ms-flex-pack: horizontal;
  justify-content: horizontal;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 8px;
  border-radius: 2px;
  margin: 12px 0 12px 0;
}

.c7 {
  min-width: 101px;
  max-width: 116px;
  padding-left: 8px;
}

.c16 {
  display: none;
}

.c18.list-row__subtitle--fade-out {
  opacity: 0;
  -webkit-transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
}

.c20 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,1);
  border: 1px solid rgba(2,108,223,1);
  max-width: 102px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 18px 0 18px 0;
}

.c20:disabled {
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,0.2);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

.c23 {
  max-height: 0;
  overflow: hidden;
}

.c19 {
  display: none;
  padding-left: 16px;
  padding-right: 8px;
}

.c14 {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c9 {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c0 {
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
}

@media screen and (min-width:481px) {
  .c11 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:481px) {
  .c13 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1025px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:481px) {
  .c17 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c17 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1025px) {
  .c17 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media only screen and {
  .c15 {
    font-size: 16px;
  }
}

@media only screen and {
  .c8 {
    font-size: 16px;
  }
}

@media screen and (min-width:769px) {
  .c1 {
    padding-bottom: 0;
  }
}

@media screen and (min-width:769px) {
  .c2 {
    border-radius: 4px;
    box-shadow: 0;
    -webkit-transition: box-shadow 500ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: box-shadow 500ms cubic-bezier(0.455,0.03,0.515,0.955);
  }
}

@media screen and (min-width:769px) {
  .c4 {
    display: block;
    border: 0;
  }

  .c4 svg {
    -webkit-transition: -webkit-transform 100ms cubic-bezier(0.455,0.03,0.515,0.955);
    -webkit-transition: transform 100ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: transform 100ms cubic-bezier(0.455,0.03,0.515,0.955);
  }
}

@media screen and (min-width:769px) {
  .c6 {
    margin: 18px 0 18px 0;
  }

  .c6:hover {
    background-color: rgba(2,108,223,0.2);
  }

  .c6:hover .text--primary:after {
    background-color: rgba(2,108,223,0.1);
  }

  .c6:hover .text--secondary:after {
    background-color: rgba(2,108,223,0.1);
  }

  .c6:hover .text--primary:before {
    content: "";
  }

  .c6:hover .text--secondary:before {
    content: "";
  }
}

@media screen and (min-width:769px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 50%;
    opacity: 1;
    -webkit-transition: opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53) 100ms;
    transition: opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53) 100ms;
  }

  .c16.list-row__title--fade-out {
    opacity: 0;
    -webkit-transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
  }
}

@media screen and (min-width:769px) {
  .c12 {
    display: none;
  }
}

@media screen and (min-width:769px) {
  .c23 {
    max-height: 0;
    height: auto;
    opacity: 1;
    border-top: 0.5px solid #E0E0E0;
  }

  .c23.list-row--open {
    -webkit-transition: max-height 300ms cubic-bezier(0.455,0.03,0.515,0.955), opacity 300ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: max-height 300ms cubic-bezier(0.455,0.03,0.515,0.955), opacity 300ms cubic-bezier(0.455,0.03,0.515,0.955);
    max-height: 600px;
    opacity: 1;
  }

  .c23.list-row--close {
    -webkit-transition: max-height 300ms cubic-bezier(0.55,0.085,0.68,0.53), opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53);
    transition: max-height 300ms cubic-bezier(0.55,0.085,0.68,0.53), opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53);
    max-height: 0;
    opacity: 0.2;
  }
}

@media screen and (min-width:769px) {
  .c19 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:769px) {
  .c21 {
    display: none;
  }
}

<div
  className="c0"
  onClick={[Function]}
  onTransitionEnd={[Function]}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <button
          aria-expanded={false}
          aria-label="Expand Row"
          className="button--expand-or-collapse c4 c5"
          data-index={0}
          role="button"
          size={45}
        >
          <svg
            fill="#1F262D"
            height={15}
            style={Object {}}
            viewBox="0 -1 15 7"
            width={15}
          >
            <path
              d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
            />
          </svg>
        </button>
        <a
          aria-label="See Tickets"
          className="c6"
          href="/"
          onClick={[Function]}
          role="link"
        >
          <div
            className="c7"
          >
            <div
              className="c8"
              color={null}
              style={
                Object {
                  "textTransform": "uppercase",
                }
              }
            >
              apr 23
            </div>
            <div
              className="c9 c10"
            >
              Thu, 8:00 PM
            </div>
          </div>
          <div
            className="c11"
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <div
              className="c12 c13"
            >
              <div
                className="c14 c15"
              >
                Del Mar Fairgrounds
              </div>
              <div
                className="c9 c10"
              >
                KABOO 3-Day Pass
              </div>
            </div>
            <div
              className="c16 c17"
            >
              <div
                className="c14 c15"
              >
                Del Mar Fairgrounds
              </div>
            </div>
            <div
              className="c18 c16 c17"
            >
              <div
                className="c14 c15"
              >
                KABOO 3-Day Pass
              </div>
            </div>
          </div>
          <div
            className="c19"
          >
            <span
              aria-label="See Tickets"
              className="c20"
              onClick={[Function]}
              role="button"
              width="102px"
            >
              See Tickets
            </span>
          </div>
        </a>
        <div
          className="c21"
        >
          <button
            aria-label="More Info"
            className="button--more-info c22"
            data-index={0}
            onClick={[Function]}
            role="button"
            size={35}
          >
            <svg
              fill="rgba(0, 0, 15, 0.6)"
              height={22}
              viewBox="0 0 5 21"
              width={22}
            >
              <path
                d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="list-row--close c23 c13"
        data-index={0}
        height={600}
      />
    </div>
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with link correctly 1`] = `
.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c11 .c11 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c13 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c17 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c24 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 75%;
  -webkit-flex: 0 0 75%;
  -ms-flex: 0 0 75%;
  flex: 0 0 75%;
}

.c26 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 25%;
  -webkit-flex: 0 0 25%;
  -ms-flex: 0 0 25%;
  flex: 0 0 25%;
}

.c15 {
  font-size: 14px;
  color: rgba(0,0,15,1);
}

.c10 {
  font-size: 14px;
  color: rgba(0,0,15,0.6);
}

.c8 {
  font-size: 14px;
  color: rgba(0,0,15,1);
  font-weight: 600;
}

.c25 {
  font-size: 14px;
  color: rgba(2,108,223,1);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  min-width: 45px;
  max-width: 45px;
  height: 45px;
  width: 45px;
}

.c5:disabled {
  color: rgba(255,255,255 0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255 0.5);
  cursor: not-allowed;
}

.c5:focus {
  outline: none;
}

.c5 > * {
  pointer-events: none;
}

.c22 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  min-width: 35px;
  max-width: 35px;
  height: 35px;
  width: 35px;
}

.c22:disabled {
  color: rgba(255,255,255 0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255 0.5);
  cursor: not-allowed;
}

.c22:focus {
  outline: none;
}

.c22 > * {
  pointer-events: none;
}

.c1:not(:last-of-type) > div {
  border-bottom: 0.5px solid #E0E0E0;
}

.c2 {
  background-color: rgba(255,255,255,1);
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
}

.c4 {
  display: none;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: horizontal;
  -webkit-justify-content: horizontal;
  -ms-flex-pack: horizontal;
  justify-content: horizontal;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 8px;
  border-radius: 2px;
  margin: 12px 0 8px 0;
}

.c7 {
  min-width: 101px;
  max-width: 116px;
  padding-left: 8px;
}

.c16 {
  display: none;
}

.c18.list-row__subtitle--fade-out {
  opacity: 0;
  -webkit-transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
}

.c20 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,1);
  border: 1px solid rgba(2,108,223,1);
  max-width: 102px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 18px 0 8px 0;
}

.c20:disabled {
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,0.2);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

.c23 {
  padding-left: 8px;
}

.c27 {
  max-height: 0;
  overflow: hidden;
}

.c19 {
  display: none;
  padding-left: 16px;
  padding-right: 8px;
}

.c14 {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c9 {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c0 {
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
}

@media screen and (min-width:481px) {
  .c11 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:481px) {
  .c13 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1025px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:481px) {
  .c17 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c17 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1025px) {
  .c17 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:481px) {
  .c24 {
    max-width: 83.33333333333334%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 83.33333333333334%;
    -ms-flex: 0 0 83.33333333333334%;
    flex: 0 0 83.33333333333334%;
  }
}

@media screen and (min-width:769px) {
  .c24 {
    max-width: 87.5%;
    -webkit-flex: 0 0 87.5%;
    -ms-flex: 0 0 87.5%;
    flex: 0 0 87.5%;
  }
}

@media screen and (min-width:1025px) {
  .c24 {
    max-width: 90%;
    -webkit-flex: 0 0 90%;
    -ms-flex: 0 0 90%;
    flex: 0 0 90%;
  }
}

@media screen and (min-width:481px) {
  .c26 {
    max-width: 16.666666666666664%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 16.666666666666664%;
    -ms-flex: 0 0 16.666666666666664%;
    flex: 0 0 16.666666666666664%;
  }
}

@media screen and (min-width:769px) {
  .c26 {
    max-width: 12.5%;
    -webkit-flex: 0 0 12.5%;
    -ms-flex: 0 0 12.5%;
    flex: 0 0 12.5%;
  }
}

@media screen and (min-width:1025px) {
  .c26 {
    max-width: 10%;
    -webkit-flex: 0 0 10%;
    -ms-flex: 0 0 10%;
    flex: 0 0 10%;
  }
}

@media only screen and {
  .c15 {
    font-size: 16px;
  }
}

@media only screen and {
  .c8 {
    font-size: 16px;
  }
}

@media screen and (min-width:769px) {
  .c1 {
    padding-bottom: 0;
  }
}

@media screen and (min-width:769px) {
  .c2 {
    border-radius: 4px;
    box-shadow: 0;
    -webkit-transition: box-shadow 500ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: box-shadow 500ms cubic-bezier(0.455,0.03,0.515,0.955);
  }
}

@media screen and (min-width:769px) {
  .c4 {
    display: block;
    border: 0;
  }

  .c4 svg {
    -webkit-transition: -webkit-transform 100ms cubic-bezier(0.455,0.03,0.515,0.955);
    -webkit-transition: transform 100ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: transform 100ms cubic-bezier(0.455,0.03,0.515,0.955);
  }
}

@media screen and (min-width:769px) {
  .c6 {
    margin: 18px 0 8px 0;
  }

  .c6:hover {
    background-color: rgba(2,108,223,0.2);
  }

  .c6:hover .text--primary:after {
    background-color: rgba(2,108,223,0.1);
  }

  .c6:hover .text--secondary:after {
    background-color: rgba(2,108,223,0.1);
  }

  .c6:hover .text--primary:before {
    content: "";
  }

  .c6:hover .text--secondary:before {
    content: "";
  }
}

@media screen and (min-width:769px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 50%;
    opacity: 1;
    -webkit-transition: opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53) 100ms;
    transition: opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53) 100ms;
  }

  .c16.list-row__title--fade-out {
    opacity: 0;
    -webkit-transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
  }
}

@media screen and (min-width:769px) {
  .c12 {
    display: none;
  }
}

@media screen and (min-width:769px) {
  .c23 {
    padding-left: 12px;
  }
}

@media screen and (min-width:769px) {
  .c27 {
    max-height: 0;
    height: auto;
    opacity: 1;
    border-top: 0.5px solid #E0E0E0;
  }

  .c27.list-row--open {
    -webkit-transition: max-height 300ms cubic-bezier(0.455,0.03,0.515,0.955), opacity 300ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: max-height 300ms cubic-bezier(0.455,0.03,0.515,0.955), opacity 300ms cubic-bezier(0.455,0.03,0.515,0.955);
    max-height: 600px;
    opacity: 1;
  }

  .c27.list-row--close {
    -webkit-transition: max-height 300ms cubic-bezier(0.55,0.085,0.68,0.53), opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53);
    transition: max-height 300ms cubic-bezier(0.55,0.085,0.68,0.53), opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53);
    max-height: 0;
    opacity: 0.2;
  }
}

@media screen and (min-width:769px) {
  .c19 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:769px) {
  .c21 {
    display: none;
  }
}

<div
  className="c0"
  onClick={[Function]}
  onTransitionEnd={[Function]}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <button
          aria-expanded={false}
          aria-label="Expand Row"
          className="button--expand-or-collapse c4 c5"
          data-index={0}
          role="button"
          size={45}
        >
          <svg
            fill="#1F262D"
            height={15}
            style={Object {}}
            viewBox="0 -1 15 7"
            width={15}
          >
            <path
              d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
            />
          </svg>
        </button>
        <a
          aria-label="See Tickets"
          className="c6"
          href="/"
          onClick={[Function]}
          role="link"
        >
          <div
            className="c7"
          >
            <div
              className="c8"
              color={null}
              style={
                Object {
                  "textTransform": "uppercase",
                }
              }
            >
              apr 23
            </div>
            <div
              className="c9 c10"
            >
              Thu, 8:00 PM
            </div>
          </div>
          <div
            className="c11"
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <div
              className="c12 c13"
            >
              <div
                className="c14 c15"
              >
                Del Mar Fairgrounds
              </div>
              <div
                className="c9 c10"
              >
                KABOO 3-Day Pass
              </div>
            </div>
            <div
              className="c16 c17"
            >
              <div
                className="c14 c15"
              >
                Del Mar Fairgrounds
              </div>
            </div>
            <div
              className="c18 c16 c17"
            >
              <div
                className="c14 c15"
              >
                KABOO 3-Day Pass
              </div>
            </div>
          </div>
          <div
            className="c19"
          >
            <span
              aria-label="See Tickets"
              className="c20"
              onClick={[Function]}
              role="button"
              width="102px"
            >
              See Tickets
            </span>
          </div>
        </a>
        <div
          className="c21"
        >
          <button
            aria-label="More Info"
            className="button--more-info c22"
            data-index={0}
            onClick={[Function]}
            role="button"
            size={35}
          >
            <svg
              fill="rgba(0, 0, 15, 0.6)"
              height={22}
              viewBox="0 0 5 21"
              width={22}
            >
              <path
                d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="c23 c11"
      >
        <div
          className="c24"
        >
          <a
            className="c25"
            color=""
            href=""
            rel="_self"
            target=""
          >
            Ticket Options Available
          </a>
        </div>
        <div
          className="c26"
        >
          <div
            className="c10"
          >
            on Partner Site
          </div>
        </div>
      </div>
      <div
        className="list-row--close c27 c13"
        data-index={0}
        height={600}
      />
    </div>
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with variant withLink correctly 1`] = `
.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c11 .c11 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c13 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c17 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c24 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 75%;
  -webkit-flex: 0 0 75%;
  -ms-flex: 0 0 75%;
  flex: 0 0 75%;
}

.c26 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 25%;
  -webkit-flex: 0 0 25%;
  -ms-flex: 0 0 25%;
  flex: 0 0 25%;
}

.c15 {
  font-size: 14px;
  color: rgba(0,0,15,1);
}

.c10 {
  font-size: 14px;
  color: rgba(0,0,15,0.6);
}

.c8 {
  font-size: 14px;
  color: rgba(0,0,15,1);
  font-weight: 600;
}

.c25 {
  font-size: 14px;
  color: rgba(2,108,223,1);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  min-width: 45px;
  max-width: 45px;
  height: 45px;
  width: 45px;
}

.c5:disabled {
  color: rgba(255,255,255 0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255 0.5);
  cursor: not-allowed;
}

.c5:focus {
  outline: none;
}

.c5 > * {
  pointer-events: none;
}

.c22 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  min-width: 35px;
  max-width: 35px;
  height: 35px;
  width: 35px;
}

.c22:disabled {
  color: rgba(255,255,255 0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255 0.5);
  cursor: not-allowed;
}

.c22:focus {
  outline: none;
}

.c22 > * {
  pointer-events: none;
}

.c1:not(:last-of-type) > div {
  border-bottom: 0.5px solid #E0E0E0;
}

.c2 {
  background-color: rgba(255,255,255,1);
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
}

.c4 {
  display: none;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: horizontal;
  -webkit-justify-content: horizontal;
  -ms-flex-pack: horizontal;
  justify-content: horizontal;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 8px;
  border-radius: 2px;
  margin: 12px 0 8px 0;
}

.c7 {
  min-width: 101px;
  max-width: 116px;
  padding-left: 8px;
}

.c16 {
  display: none;
}

.c18.list-row__subtitle--fade-out {
  opacity: 0;
  -webkit-transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
}

.c20 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,1);
  border: 1px solid rgba(2,108,223,1);
  max-width: 102px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 18px 0 8px 0;
}

.c20:disabled {
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,0.2);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

.c23 {
  padding-left: 8px;
}

.c27 {
  max-height: 0;
  overflow: hidden;
}

.c19 {
  display: none;
  padding-left: 16px;
  padding-right: 8px;
}

.c14 {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c9 {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c0 {
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
}

@media screen and (min-width:481px) {
  .c11 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:481px) {
  .c13 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1025px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:481px) {
  .c17 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c17 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1025px) {
  .c17 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:481px) {
  .c24 {
    max-width: 83.33333333333334%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 83.33333333333334%;
    -ms-flex: 0 0 83.33333333333334%;
    flex: 0 0 83.33333333333334%;
  }
}

@media screen and (min-width:769px) {
  .c24 {
    max-width: 87.5%;
    -webkit-flex: 0 0 87.5%;
    -ms-flex: 0 0 87.5%;
    flex: 0 0 87.5%;
  }
}

@media screen and (min-width:1025px) {
  .c24 {
    max-width: 90%;
    -webkit-flex: 0 0 90%;
    -ms-flex: 0 0 90%;
    flex: 0 0 90%;
  }
}

@media screen and (min-width:481px) {
  .c26 {
    max-width: 16.666666666666664%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 16.666666666666664%;
    -ms-flex: 0 0 16.666666666666664%;
    flex: 0 0 16.666666666666664%;
  }
}

@media screen and (min-width:769px) {
  .c26 {
    max-width: 12.5%;
    -webkit-flex: 0 0 12.5%;
    -ms-flex: 0 0 12.5%;
    flex: 0 0 12.5%;
  }
}

@media screen and (min-width:1025px) {
  .c26 {
    max-width: 10%;
    -webkit-flex: 0 0 10%;
    -ms-flex: 0 0 10%;
    flex: 0 0 10%;
  }
}

@media only screen and {
  .c15 {
    font-size: 16px;
  }
}

@media only screen and {
  .c8 {
    font-size: 16px;
  }
}

@media screen and (min-width:769px) {
  .c1 {
    padding-bottom: 0;
  }
}

@media screen and (min-width:769px) {
  .c2 {
    border-radius: 4px;
    box-shadow: 0;
    -webkit-transition: box-shadow 500ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: box-shadow 500ms cubic-bezier(0.455,0.03,0.515,0.955);
  }
}

@media screen and (min-width:769px) {
  .c4 {
    display: block;
    border: 0;
  }

  .c4 svg {
    -webkit-transition: -webkit-transform 100ms cubic-bezier(0.455,0.03,0.515,0.955);
    -webkit-transition: transform 100ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: transform 100ms cubic-bezier(0.455,0.03,0.515,0.955);
  }
}

@media screen and (min-width:769px) {
  .c6 {
    margin: 18px 0 8px 0;
  }

  .c6:hover {
    background-color: rgba(2,108,223,0.2);
  }

  .c6:hover .text--primary:after {
    background-color: rgba(2,108,223,0.1);
  }

  .c6:hover .text--secondary:after {
    background-color: rgba(2,108,223,0.1);
  }

  .c6:hover .text--primary:before {
    content: "";
  }

  .c6:hover .text--secondary:before {
    content: "";
  }
}

@media screen and (min-width:769px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 50%;
    opacity: 1;
    -webkit-transition: opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53) 100ms;
    transition: opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53) 100ms;
  }

  .c16.list-row__title--fade-out {
    opacity: 0;
    -webkit-transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
  }
}

@media screen and (min-width:769px) {
  .c12 {
    display: none;
  }
}

@media screen and (min-width:769px) {
  .c23 {
    padding-left: 12px;
  }
}

@media screen and (min-width:769px) {
  .c27 {
    max-height: 0;
    height: auto;
    opacity: 1;
    border-top: 0.5px solid #E0E0E0;
  }

  .c27.list-row--open {
    -webkit-transition: max-height 300ms cubic-bezier(0.455,0.03,0.515,0.955), opacity 300ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: max-height 300ms cubic-bezier(0.455,0.03,0.515,0.955), opacity 300ms cubic-bezier(0.455,0.03,0.515,0.955);
    max-height: 600px;
    opacity: 1;
  }

  .c27.list-row--close {
    -webkit-transition: max-height 300ms cubic-bezier(0.55,0.085,0.68,0.53), opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53);
    transition: max-height 300ms cubic-bezier(0.55,0.085,0.68,0.53), opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53);
    max-height: 0;
    opacity: 0.2;
  }
}

@media screen and (min-width:769px) {
  .c19 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:769px) {
  .c21 {
    display: none;
  }
}

<div
  className="c0"
  onClick={[Function]}
  onTransitionEnd={[Function]}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <button
          aria-expanded={false}
          aria-label="Expand Row"
          className="button--expand-or-collapse c4 c5"
          data-index={0}
          role="button"
          size={45}
        >
          <svg
            fill="#1F262D"
            height={15}
            style={Object {}}
            viewBox="0 -1 15 7"
            width={15}
          >
            <path
              d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
            />
          </svg>
        </button>
        <a
          aria-label="See Tickets"
          className="c6"
          href="/"
          onClick={[Function]}
          role="link"
        >
          <div
            className="c7"
          >
            <div
              className="c8"
              color={null}
              style={
                Object {
                  "textTransform": "uppercase",
                }
              }
            >
              apr 23
            </div>
            <div
              className="c9 c10"
            >
              Thu, 8:00 PM
            </div>
          </div>
          <div
            className="c11"
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <div
              className="c12 c13"
            >
              <div
                className="c14 c15"
              >
                Del Mar Fairgrounds
              </div>
              <div
                className="c9 c10"
              >
                KABOO 3-Day Pass
              </div>
            </div>
            <div
              className="c16 c17"
            >
              <div
                className="c14 c15"
              >
                Del Mar Fairgrounds
              </div>
            </div>
            <div
              className="c18 c16 c17"
            >
              <div
                className="c14 c15"
              >
                KABOO 3-Day Pass
              </div>
            </div>
          </div>
          <div
            className="c19"
          >
            <span
              aria-label="See Tickets"
              className="c20"
              onClick={[Function]}
              role="button"
              width="102px"
            >
              See Tickets
            </span>
          </div>
        </a>
        <div
          className="c21"
        >
          <button
            aria-label="More Info"
            className="button--more-info c22"
            data-index={0}
            onClick={[Function]}
            role="button"
            size={35}
          >
            <svg
              fill="rgba(0, 0, 15, 0.6)"
              height={22}
              viewBox="0 0 5 21"
              width={22}
            >
              <path
                d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="c23 c11"
      >
        <div
          className="c24"
        >
          <a
            className="c25"
            color=""
            href="/"
            rel="_self"
            target=""
          >
            Ticket options available
          </a>
        </div>
        <div
          className="c26"
        >
          <div
            className="c10"
          >
            click here
          </div>
        </div>
      </div>
      <div
        className="list-row--close c27 c13"
        data-index={0}
        height={600}
      />
    </div>
  </div>
</div>
`;

exports[`<ListRow /> renders standard List Row correctly 1`] = `
.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c11 .c11 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c13 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c17 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c15 {
  font-size: 14px;
  color: rgba(0,0,15,1);
}

.c10 {
  font-size: 14px;
  color: rgba(0,0,15,0.6);
}

.c8 {
  font-size: 14px;
  color: rgba(0,0,15,1);
  font-weight: 600;
}

.c5 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  min-width: 45px;
  max-width: 45px;
  height: 45px;
  width: 45px;
}

.c5:disabled {
  color: rgba(255,255,255 0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255 0.5);
  cursor: not-allowed;
}

.c5:focus {
  outline: none;
}

.c5 > * {
  pointer-events: none;
}

.c22 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  min-width: 35px;
  max-width: 35px;
  height: 35px;
  width: 35px;
}

.c22:disabled {
  color: rgba(255,255,255 0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255 0.5);
  cursor: not-allowed;
}

.c22:focus {
  outline: none;
}

.c22 > * {
  pointer-events: none;
}

.c1:not(:last-of-type) > div {
  border-bottom: 0.5px solid #E0E0E0;
}

.c2 {
  background-color: rgba(255,255,255,1);
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
}

.c4 {
  display: none;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: horizontal;
  -webkit-justify-content: horizontal;
  -ms-flex-pack: horizontal;
  justify-content: horizontal;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 8px;
  border-radius: 2px;
  margin: 12px 0 12px 0;
}

.c7 {
  min-width: 101px;
  max-width: 116px;
  padding-left: 8px;
}

.c16 {
  display: none;
}

.c18.list-row__subtitle--fade-out {
  opacity: 0;
  -webkit-transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
}

.c20 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,1);
  border: 1px solid rgba(2,108,223,1);
  max-width: 102px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 18px 0 18px 0;
}

.c20:disabled {
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,0.2);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

.c23 {
  max-height: 0;
  overflow: hidden;
}

.c19 {
  display: none;
  padding-left: 16px;
  padding-right: 8px;
}

.c14 {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c9 {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c0 {
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
}

@media screen and (min-width:481px) {
  .c11 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:481px) {
  .c13 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1025px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:481px) {
  .c17 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c17 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1025px) {
  .c17 {
    max-width: 50%;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media only screen and {
  .c15 {
    font-size: 16px;
  }
}

@media only screen and {
  .c8 {
    font-size: 16px;
  }
}

@media screen and (min-width:769px) {
  .c1 {
    padding-bottom: 0;
  }
}

@media screen and (min-width:769px) {
  .c2 {
    border-radius: 4px;
    box-shadow: 0;
    -webkit-transition: box-shadow 500ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: box-shadow 500ms cubic-bezier(0.455,0.03,0.515,0.955);
  }
}

@media screen and (min-width:769px) {
  .c4 {
    display: block;
    border: 0;
  }

  .c4 svg {
    -webkit-transition: -webkit-transform 100ms cubic-bezier(0.455,0.03,0.515,0.955);
    -webkit-transition: transform 100ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: transform 100ms cubic-bezier(0.455,0.03,0.515,0.955);
  }
}

@media screen and (min-width:769px) {
  .c6 {
    margin: 18px 0 18px 0;
  }

  .c6:hover {
    background-color: rgba(2,108,223,0.2);
  }

  .c6:hover .text--primary:after {
    background-color: rgba(2,108,223,0.1);
  }

  .c6:hover .text--secondary:after {
    background-color: rgba(2,108,223,0.1);
  }

  .c6:hover .text--primary:before {
    content: "";
  }

  .c6:hover .text--secondary:before {
    content: "";
  }
}

@media screen and (min-width:769px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 50%;
    opacity: 1;
    -webkit-transition: opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53) 100ms;
    transition: opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53) 100ms;
  }

  .c16.list-row__title--fade-out {
    opacity: 0;
    -webkit-transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: opacity 100ms cubic-bezier(0.455,0.03,0.515,0.955);
  }
}

@media screen and (min-width:769px) {
  .c12 {
    display: none;
  }
}

@media screen and (min-width:769px) {
  .c23 {
    max-height: 0;
    height: auto;
    opacity: 1;
    border-top: 0.5px solid #E0E0E0;
  }

  .c23.list-row--open {
    -webkit-transition: max-height 300ms cubic-bezier(0.455,0.03,0.515,0.955), opacity 300ms cubic-bezier(0.455,0.03,0.515,0.955);
    transition: max-height 300ms cubic-bezier(0.455,0.03,0.515,0.955), opacity 300ms cubic-bezier(0.455,0.03,0.515,0.955);
    max-height: 600px;
    opacity: 1;
  }

  .c23.list-row--close {
    -webkit-transition: max-height 300ms cubic-bezier(0.55,0.085,0.68,0.53), opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53);
    transition: max-height 300ms cubic-bezier(0.55,0.085,0.68,0.53), opacity 300ms cubic-bezier(0.55,0.085,0.68,0.53);
    max-height: 0;
    opacity: 0.2;
  }
}

@media screen and (min-width:769px) {
  .c19 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:769px) {
  .c21 {
    display: none;
  }
}

<div
  className="c0"
  onClick={[Function]}
  onTransitionEnd={[Function]}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <button
          aria-expanded={false}
          aria-label="Expand Row"
          className="button--expand-or-collapse c4 c5"
          data-index={0}
          role="button"
          size={45}
        >
          <svg
            fill="#1F262D"
            height={15}
            style={Object {}}
            viewBox="0 -1 15 7"
            width={15}
          >
            <path
              d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
            />
          </svg>
        </button>
        <a
          aria-label="See Tickets"
          className="c6"
          href="/"
          onClick={[Function]}
          role="link"
        >
          <div
            className="c7"
          >
            <div
              className="c8"
              color={null}
              style={
                Object {
                  "textTransform": "uppercase",
                }
              }
            >
              apr 23
            </div>
            <div
              className="c9 c10"
            >
              Thu, 8:00 PM
            </div>
          </div>
          <div
            className="c11"
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <div
              className="c12 c13"
            >
              <div
                className="c14 c15"
              >
                Del Mar Fairgrounds
              </div>
              <div
                className="c9 c10"
              >
                KABOO 3-Day Pass
              </div>
            </div>
            <div
              className="c16 c17"
            >
              <div
                className="c14 c15"
              >
                Del Mar Fairgrounds
              </div>
            </div>
            <div
              className="c18 c16 c17"
            >
              <div
                className="c14 c15"
              >
                KABOO 3-Day Pass
              </div>
            </div>
          </div>
          <div
            className="c19"
          >
            <span
              aria-label="See Tickets"
              className="c20"
              onClick={[Function]}
              role="button"
              width="102px"
            >
              See Tickets
            </span>
          </div>
        </a>
        <div
          className="c21"
        >
          <button
            aria-label="More Info"
            className="button--more-info c22"
            data-index={0}
            onClick={[Function]}
            role="button"
            size={35}
          >
            <svg
              fill="rgba(0, 0, 15, 0.6)"
              height={22}
              viewBox="0 0 5 21"
              width={22}
            >
              <path
                d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="list-row--close c23 c13"
        data-index={0}
        height={600}
      />
    </div>
  </div>
</div>
`;
